--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mproj",
   "version": "1.0.0",
   "description": "game",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "test"
   },
